Fixed text alignments

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -81,7 +81,7 @@
 
 .post-content p,
 .post-content li {
-  text-align: justify;
+  text-align: left;
 }
 
 .post-content .weekly-schedule table {
